tests/testWorkflows/invalid_workflows/tooManyActionInputsWorkflow.playbook
{
    "name": "tooManyActionInputsWorkflow",
    "workflows": [
        {
            "name": "multiactionWorkflow",
            "branches": [
                {
                    "conditions": [
                        {
                            "action_name": "regMatch",
                            "app_name": "HelloWorldBounded",
                            "arguments": [
                                {
                                    "name": "regex",
                                    "value": "(.*)"
                                }
                            ],
                            "transforms": [
                                {
                                    "action_name": "length",
                                    "app_name": "HelloWorldBounded",
                                    "arguments": []
                                }
                            ]
                        }
                    ],
                    "destination_uid": "1",
                    "source_uid": "2",
                    "status": "Success"
                }
            ],
            "start": "2",
            "actions": [
                {
                    "action_name": "returnPlusOne",
                    "app_name": "HelloWorldBounded",
                    "arguments": [
                        {
                            "name": "number",
                            "value": "1"
                        },
                        {
                            "name": "number2",
                            "value": "2"
                        }
                    ],
                    "name": "1",
                    "position": {},
                    "uid": "1",
                    "device_id": 1
                },
                {
                    "action_name": "helloWorld",
                    "app_name": "Invalid",
                    "arguments": [],
                    "name": "start",
                    "position": {},
                    "uid": "2",
                    "device_id": 1
                }
            ]
        }
    ]
}